--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,11 @@
-anyio==4.1.0
-blinker==1.8.2
-certifi==2023.11.17
-charset-normalizer==3.4.0
-click==8.1.7
-colorama==0.4.6
 Flask==3.0.3
 Flask-MySQLdb==2.0.0
-h11==0.14.0
-httpcore==1.0.2
-httpx==0.25.2
-idna==3.5
-iniconfig==2.1.0
-itsdangerous==2.2.0
+mysqlclient==2.2.5
+
+# Flask core dependencies
+Werkzeug==3.0.3
 Jinja2==3.1.4
 MarkupSafe==2.1.5
-mysql-connector-python==9.1.0
-mysqlclient==2.2.5
-numpy==1.26.2
-packaging==23.1
-plotly==5.16.1
-pluggy==1.6.0
-Pygments==2.19.2
-pytest==8.4.1
-python-telegram-bot==20.6
-requests==2.32.3
-sniffio==1.3.0
-tenacity==8.2.3
-urllib3==2.2.3
-Werkzeug==3.0.3
+itsdangerous==2.2.0
+click==8.1.7
+blinker==1.8.2
